inner page fixes on tablets and mobile devices

--- a/css/480.css
+++ b/css/480.css
@@ -18,3 +18,6 @@
 	width:33.3333%;
 	float:left;
 }
+.contact-bg{
+	padding:55px 110px 30px;
+}
